Fixed z-index on player wrap

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -16,6 +16,7 @@ body {
 $sidebar-width: 430px;
 
 #player_wrap {
+    z-index: 100;
 	position: fixed;
 	left: 10px;
 	top: 10px;
@@ -104,7 +105,8 @@ $sidebar-width: 430px;
 	padding: 5px;
 }
 
-// States
+// View states
+
 body.hide-qr {
 	#qrcode {
 		bottom: -($sidebar-width + 15);
